# simple-api-rus-rocket

./: Cargo.toml  Dockerfile  Makefile  README.md
src/: main.rs
src/handler/: task.rs
src/model/: base.rs  mgo.rs
src/repository/: mgo.rs  mod.rs
