[package]
name = "simple-api-rust"
version = "0.1.0"
edition = "2021"
[lib]
name="my_crate"
path="src/model/base.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.30", features = ["serde"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 